--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body id="body">
     <div class="main">
         <div class="wrapper">
-            <img id="first-image" src="/photo/image1.avif" alt="">
-            <img id="second-image" src="/photo/image4.avif" alt="">
-            <img id="third-image" src="/photo/image3.avif" alt="">
+            <img id="first-image" src="image1.avif" alt="">
+            <img id="second-image" src="image4.avif" alt="">
+            <img id="third-image" src="image3.avif" alt="">
         </div>
 
         <div id="dotes">
